:lipstick: Fixed spaceing issue on mobile

--- a/src/app/auth/home/home.component.scss
+++ b/src/app/auth/home/home.component.scss
@@ -89,6 +89,11 @@
   display: block;
   margin: auto;
   padding: 0.5% 1%;
+  @media screen and (max-width: 768px) {
+    padding-right: 6%;
+  }
+  padding-right: 2%;
+
   text-align: center;
   width: fit-content;
   position: relative;
